fix resources top spacing

--- a/wp-content/themes/liquorlicenseadvisor/site.css
+++ b/wp-content/themes/liquorlicenseadvisor/site.css
@@ -621,7 +621,7 @@ box-shadow: inset 0 -2px 5px rgba(0,0,0,.1);*/
 /* resources page */
 .search {
   float: left;
-  width: 40%;
+  width: 30%;
   margin-left: 5%;
   margin-top: 5%; 
   text-align: left;
@@ -641,7 +641,7 @@ box-shadow: inset 0 -2px 5px rgba(0,0,0,.1);*/
 .articles {
   float: right;
   width: 60%;
-  /*margin-top: 5%;*/
+  margin-top: 5%;
   text-align: right;
 }
 
